--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,7 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": [
-    	"plugin:react/recommended",
-		  "airbnb",
-		  "prettier"
-	],
+	"extends": ["plugin:react/recommended", "airbnb", "prettier"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
@@ -28,15 +24,14 @@
 				"tsx": "never"
 			}
 		],
+		"arrow-body-style": ["error", "always"],
 		"no-unused-vars": "off",
+		"react/function-component-definition": "off",
 		"react/jsx-indent": [0],
 		"react/react-in-jsx-scope": 0,
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-props-no-spreading": "off",
-		"react/jsx-filename-extension": [
-			1,
-			{ "extensions": [".js", ".jsx", ".ts", ".tsx"] }
-		],
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
 		"no-use-before-define": [0],
 		"react/display-name": 0,
 		"react/prop-types": 0,
@@ -58,10 +53,7 @@
 		"no-shadow": 1,
 		"prefer-const": 1,
 		"prefer-spread": 1,
-		"no-unused-expressions": [
-			"error",
-			{ "allowShortCircuit": true, "allowTernary": true }
-		],
+		"no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
 		"no-return-assign": "off",
 		"no-underscore-dangle": "off",
 		"react/require-default-props": [2, { "ignoreFunctionalComponents": true }],
