--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,9 +32,16 @@
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-props-no-spreading": "off",
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+		"react/destructuring-assignment": 0,
+		"react/no-access-state-in-setstate": "off",
+		"react/no-unescaped-entities": 0,
+		"react/self-closing-comp": 0,
 		"no-use-before-define": [0],
+		"class-methods-use-this": 0,
 		"react/display-name": 0,
 		"react/prop-types": 0,
+		"react/button-has-type": 0,
+		"react/state-in-constructor": 0,
 		"@typescript-eslint/explicit-function-return-type": 0,
 		"@typescript-eslint/explicit-member-accessibility": 0,
 		"@typescript-eslint/indent": 0,
@@ -49,7 +56,7 @@
 			}
 		],
 		"no-console": 1,
-		"import/prefer-default-export": 1,
+		"import/prefer-default-export": "off",
 		"no-shadow": 1,
 		"prefer-const": 1,
 		"prefer-spread": 1,
