--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,9 @@
 		"react/destructuring-assignment": 0,
 		"react/no-access-state-in-setstate": "off",
 		"react/no-unescaped-entities": 0,
+		"react/no-unused-prop-types": 0,
 		"react/self-closing-comp": 0,
+		"react/jsx-no-constructed-context-values": 0,
 		"no-use-before-define": [0],
 		"class-methods-use-this": 0,
 		"react/display-name": 0,
