--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,10 +66,7 @@
 		"no-return-assign": "off",
 		"no-underscore-dangle": "off",
 		"react/require-default-props": [2, { "ignoreFunctionalComponents": true }],
-		"no-param-reassign": [
-			"error",
-			{ "props": true, "ignorePropertyModificationsFor": ["state"] }
-		]
+		"no-param-reassign": [0]
 	},
 	"settings": {
 		"import/resolver": {
